--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style-mobile.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
@@ -59,7 +60,7 @@
 				  </a>
 				</h1>			
 			</p><br><br>
-			<a href="#work">
+			<a href="#work" class="scrollLink">
 				<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
 			</a>
 		</article>
@@ -69,7 +70,7 @@
 	<div class="wrapper">
 		<div class="section-trait" id="work">
 			<h2>WORK</h2>
-			<h4>What problems have I solved?</h4>
+			<h4>See what I've designed, created, iterated</h4>
 			<div class="row-index">
 			    <a href="projects/artism.html">
 				    <div class="project-small" id="artism">
@@ -165,8 +166,9 @@
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a>
 		<a target="_blank" href="https://medium.com/@weichenglily" class="fa foot fa-medium" style="font-size:25px"></a><br>
 		<span class="footer">wei.cheng@utexas.edu</span><br>
-		<span class="footer">&copy; made by WEI CHENG | 2019.</span>
+		<span class="footer">&copy; designed and coded by WEI CHENG | 2019.</span>
 	</footer>
+
 </div>
 	<script src="js/loader.js"></script>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
