--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -48,7 +48,7 @@
 	<div class="wrapper-project" id="wrapper">
 		<div class="row-project">
 			<div class="col-two">
-				<h5 class="overview">Overview</h5>
+				<h2 class="overview">Overview</h2>
 				<p>
 					The website is developed for 2016 Coorporate Image Filming Competition of Kaoshiung Rapid Transit Coorperation for contestants to know information and register for the filming competition.
 				</p>
@@ -56,10 +56,11 @@
 			<div class="col-two">
 				<img src="web_krtco/krtco.png" alt="" class="img-col-two">
 			</div>
-
+		</div>
+		<div class="row-thin" data-aos="slide-up" data-aos-once="true">
 			<div class="col-three">
-			<h6 class="overview">Role</h6>
-			<p>UI design / UI development</p>
+				<h6 class="overview">Role</h6>
+				<p>UI design / UI development</p>
 			</div>
 
 			<div class="col-three">
@@ -75,7 +76,7 @@
 
 		<div class="row-project row-project-color" data-aos="slide-up" data-aos-once="true">
 			<div class="col-one">
-				<h6>WHY DID THIS WEBSITE EXIST?</h6>
+				<h6>WHY DID WE CREATE THIS WEBSITE?</h6>
 				<h5>Background</h5>				
 				<p>Kaohsiung Rapid Transportation Corporation is a company that manages rapid transit system in Kaohsiung city, Taiwan. They held a competition for their corporate image video since 2013. People can team up, shoot short advertisement film and compete to win the corporate image video.
 				</p>
@@ -92,23 +93,27 @@
 				<p>This project used System Analysis and Design method to develop. KRTCO listed their requirements and provided resources, project managers planned the structures with developers.</p>
 				<img src="web_krtco/process.svg" alt="" class="img-col-one">
 			</div>
-			<div class="col-one">
+			<div class="col-one" data-aos="slide-up" data-aos-once="true">
 				<div class="col-two">
-					<b>1 - System Planning and Analysis</b><br>
+					<div class="number">1</div>
+					<b>Planning and Analysis</b><br>
 					Kaoshiung Rapid Transit Cooperation hired visual designer to determined the visual elements, and the project manager have listed out the requirements. Then they held meeting with development teams to discussed about the requirements.<br><br>
 				</div>
 				<div class="col-two">
-					<b>2 - System Design</b><br>
+					<div class="number">2</div>
+					<b>Design</b><br>
 					In this step, I utalized the materials the company gave me and made wireframe of the web layout, and I cooporated with databse managers to discuss about the structure of frontend and backend.<br><br>
 				</div>
 			</div>
-			<div class="col-one">
+			<div class="col-one" data-aos="slide-up" data-aos-once="true">
 				<div class="col-two">
-					<b>3 - System Implementation and Operation</b><br>
+					<div class="number">3</div>
+					<b>Implementation and Operation</b><br>
 					I developed the frontend code and collaborated with the backend developers to complete the system. Later on we executed testing and then deploy the website.<br><br>
 				</div>
 				<div class="col-two">
-					<b>4 - System Maintenance</b><br>
+					<div class="number">4</div>
+					<b>Maintenance</b><br>
 					I collected feedbacks from the users and evaluate, then made adjustments to some of the UI.
 				</div>
 			</div>
@@ -120,7 +125,7 @@
 					<h5>User Interfaces</h5>
 				</div>
 				<div class="col-gif"><img src="web_krtco/01.gif" alt="" class="img-col-two"></div>
-				<div class="col-three">
+				<div class="col-three" data-aos="slide-left" data-aos-once="true">
 					<h6>1 - Home Page</h6>				
 					<p>This page shows the main visual posters of this competition, 4 latest news and the official trailer of the competition. It gives user the first overview of this website.</p>
 				</div>
@@ -130,7 +135,7 @@
 				<div class="col-gif">
 					<img src="web_krtco/02.gif" alt="" class="img-col-two">
 				</div>				
-				<div class="col-three">
+				<div class="col-three" data-aos="slide-left" data-aos-once="true">
 					<h6>2 - Latest News</h6>
 					<p>This page listed out all the news that posted by the project team of this competition, showing the posted date and the number of people viewing each news.</p>
 				</div>			
@@ -140,7 +145,7 @@
 				<div class="col-gif">
 					<img src="web_krtco/03.png" alt="" class="img-col-two">
 				</div>
-				<div class="col-three">
+				<div class="col-three" data-aos="slide-left" data-aos-once="true">
 					<h6>3 - Introduction</h6>
 					<p>This page introduces the origin, the link to past years official websites, and the full introduction of the competition in the year 2016.</p>
 				</div>
@@ -150,7 +155,7 @@
 				<div class="col-gif">
 					<img src="web_krtco/04.gif" alt="" class="img-col-two">
 				</div>				
-				<div class="col-three">
+				<div class="col-three" data-aos="slide-left" data-aos-once="true">
 					<h6>4 - Competition Information</h6>
 					<p>This is the main information about the competition. Includes the dates, registration information, video upload instructions, scoring rubrics, judges introduction, and prize information.</p>
 				</div>			
@@ -160,7 +165,7 @@
 				<div class="col-gif">
 					<img src="web_krtco/05.gif" alt="" class="img-col-two">
 				</div>	
-				<div class="col-three">
+				<div class="col-three" data-aos="slide-left" data-aos-once="true">
 					<h6>5 - Voting / Viewing Video</h6>
 					<p>During the voting stage, this page provide as the voting system for people to vote for their favorite short film. After the voting, it listed out all the films that participated in this competition.</p>
 				</div>
@@ -190,7 +195,7 @@
 			</div>		
 		<div class="row-project row-project-color-2">
 			<div class="col-one" data-aos="zoom-in" data-aos-once="true">
-				<h5>Conclusion</h5>
+				<h5>What I learned</h5>
 				<p>In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method the development of this website. I practiced how to communicate with designers and project managers, and enhanced my web design and elopement skills.</p>		
 			</div>
 		</div>
