update rows and wrappers

--- a/art.html
+++ b/art.html
@@ -49,7 +49,7 @@
 		</article>
 	</div>
 
-<div class="wrapper">
+<div class="wrapper-project">
 	<div class="toolbar mb2 mt2">
 	  <button class="btn fil-cat selectedClass" data-rel="all">All</button>
 	  <button class="btn fil-cat" data-rel="poster">Posters</button>
