--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<br><br>
 			I am optimistic and energetic, I like to accept challenges and share my experiences with people. I hope that I can design meaningful solutions for users and make them happy.<br>
 			Thank you for visiting my portfolio :)</p>	
-			<a href="weicheng_resume.pdf"><div class="btn-visit">View Resume</div></a>
+			<a href="weicheng_resume.pdf"><div class="btn-visit" data-aos="zoom-in">View Resume</div></a>
 		</div>
 	</div>
 	<div style="clear:both;"></div>
@@ -143,14 +143,14 @@
 			<div class="card" data-aos="flip-left">
 				<img src="img/process-1.png" class="img-col-one"/><br>
 				<h3>1 - UNDERSTAND</h3>
-				<p>First, I do research, explore users, and keep challenging assumptions to <mark>define</mark> the problem space.</p>
+				<p>First, I do research, interview users, and keep challenging assumptions to <mark>define</mark> the problem space.</p>
 			</div>
 			<div class="card" data-aos="flip-left" data-aos-delay="400">
 				<img src="img/process-2.png" class="img-col-one"/><br>
 				<h3>2 - MAKE</h3>
-				<p>Then I use the insights from <mark>UNDERSTNAD</mark> to design, ideate, and create prptotypes.</p>
+				<p>Then I use the insights from <mark>UNDERSTNAD</mark> to design, ideate, and create designs and prptotypes.</p>
 			</div>
-			<div class="card" data-aos="flip-left" data-aos-delay="600">
+			<div class="card" data-aos="flip-left" data-aos-delay="800">
 				<img src="img/process-3.png" class="img-col-one"/><br>
 				<h3>3 - REPEAT</h3>
 				<p>Finally, I repeat and iterate ideas and do usability testing based on learnings from <mark>MAKE</mark> to improve.</p>
