--- a/projects/artism.html
+++ b/projects/artism.html
@@ -200,18 +200,18 @@
 		    <a class="next" onclick="plusSlides(1)">&#10095;</a>	  		
 		</div>
 
-		<div class="row-project row-project-color">
+<!-- 		<div class="row-project row-project-color">
 			<div class="col-one">
 				<h5>Ideate</h5>
 				<h6>paper sketch</h6>
 				<img src="artism/sketch-1.jpg" alt="sketch" class="img-col-one-80">
 			</div>
-		</div>
+		</div> -->
 		<div class="row-full">		
 			<div class="col-one">
 				<h6>HOW DOES ARTISM WORKS</h6>
 				<h5>User Flow</h5>
-				<img src="artism/flow.png" alt="flow" class="img-col-one">
+				<img src="artism/flow.png" alt="flow" class="img-col-one" data-aos="zoom-in" data-aos-once="true">
 			</div>
 		</div>
 		<div class="row-project">
@@ -230,8 +230,8 @@
 
 <!-- 		<div class="row-project">
 			<div class="col-one">
-				<h5>Reflection</h5>		
-				<img src="artism/comeback.svg" alt="" class="img-col-one">
+				<h5>Reflection</h5>
+				<p></p>
 			</div>
 		</div> -->
 
