--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 
-		<div class="row-project row-project-color">
+		<div class="row-full row-project-color">
 			<div class="col-one">
 				<h6>WHAT'S IN DESIGN DIARY?</h6>
 				<h5>The Diary Topics</h5>
