--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 			<div class="card" data-aos="flip-left">
 				<img src="img/process-1.png" class="img-col-one"/><br>
 				<h3>1 - UNDERSTAND</h3>
-				<p>First, I do research, interview users, and keep challenging assumptions to <mark>define</mark> the problem space.</p>
+				<p>First, I do research, interview users, and keep challenging assumptions to define the problem space.</p>
 			</div>
 			<div class="card" data-aos="flip-left" data-aos-delay="400">
 				<img src="img/process-2.png" class="img-col-one"/><br>
