--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -196,7 +196,7 @@
 		<div class="row-project row-project-color-2">
 			<div class="col-one" data-aos="zoom-in" data-aos-once="true">
 				<h5>What I learned</h5>
-				<p>In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method the development of this website. I practiced how to communicate with designers and project managers, and enhanced my web design and elopement skills.</p>		
+				<p>In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method to the development of this website. I practiced how to communicate with designers and project managers, and enhanced my web design and elopement skills.</p>		
 			</div>
 		</div>
 		<a href="artism.html">
