resume file name

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<br><br>
 			I am optimistic and energetic, I like to accept challenges and share my experiences with people. I hope that I can design meaningful solutions for users and make them happy.<br>
 			Thank you for visiting my portfolio :)</p>	
-			<a href="weicheng_resume.pdf"><div class="btn-visit" data-aos="zoom-in">View Resume</div></a>
+			<a href="wei_cheng_resume.pdf"><div class="btn-visit" data-aos="zoom-in">View Resume</div></a>
 		</div>
 	</div>
 	<div style="clear:both;"></div>
