--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<!-- <div class="parallax-100 parallax-index-1"> -->
 	<div class="parallax" id="trans1">
 		<article class="intro">
-			<img src="img/logo.png" alt="logo" class="logo-mid">
+			<!-- <img src="img/logo.png" alt="logo" class="logo-mid"> -->
 			<!-- <h1 class="tracking-in-contract">Wei Cheng</h1> -->
 			<h1>Wei Cheng</h1>
 			<p>
@@ -61,58 +61,105 @@
 				  </a>
 				</h1>			
 			</p><br><br>
-			<a href="#work" class="scrollLink">
+			<a href="#process" class="scrollLink">
 				<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
 			</a>
 		</article>
 	  <div style="clear:both;"></div>
 	</div>
+	
+	<div class="section-index" id="process">
+		<h2>My Design Process</h2>
+		<div class="card" data-aos="flip-left" data-aos-once="true">
+			<img src="img/process-1.png" class="img-col-one"/><br>
+			<h3>1 - UNDERSTAND</h3>
+			<p>First, I do research, interview users, and keep challenging assumptions to define the problem space.</p>
+		</div>
+		<div class="card" data-aos="flip-left" data-aos-delay="400" data-aos-once="true">
+			<img src="img/process-2.png" class="img-col-one"/><br>
+			<h3>2 - MAKE</h3>
+			<p>Then I use the insights from <mark>UNDERSTNAD</mark> to design, ideate, and create designs and prptotypes.</p>
+		</div>
+		<div class="card" data-aos="flip-left" data-aos-delay="800" data-aos-once="true">
+			<img src="img/process-3.png" class="img-col-one"/><br>
+			<h3>3 - REPEAT</h3>
+			<p>Finally, I repeat and iterate ideas and do usability testing based on learnings from <mark>MAKE</mark> to improve.</p>
+		</div>
+	</div>
 
-	<div class="wrapper-index">
 		<div class="section-index" id="work">
 			<h2>WORK</h2>
 			<h4>Some projects I've done</h4>
 			<div class="row-index">
-			    <a href="projects/artism.html">
-				    <div class="project-small" id="artism">
-				    	<img id="img-artism" class="project-size" src="projects/artism/artism-project.png" alt="" data-aos="zoom-in" data-aos-duration="2000" data-aos-once="true">
-				    	<h3>Artism</h3>
-				    	<h4>UX Design</h4>
+			    <a class="project-block" href="projects/sportsbiz.html">
+				    <div class="project-small" id="sportsbiz">
+				    	<img id="img-sportsbiz" class="project-size" src="projects/sportsbiz/sportsbiz-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">>
 				    </div>
-				</a>			    
-			    <a href="projects/krtco.html">
-				    <div class="project-small" id="krtco">
-				    	<img id="img-artism" class="project-size" src="projects/web_krtco/krtco-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    	<h3>KRTCO Website</h3>
-				    	<h4>Web UI Design & Develop</h4>
+				    <div class="project-overlay">
+				    	<h3>Sportsbiz</h3>
+				    	<h4 class="color-white">UI/UX Design Internship</h4>	
 				    </div>
+				</a>	    
+			    <a class="project-block" href="projects/hcx.html">			    
+				    <div class="project-small" id="hcx">
+				    	<img id="img-artism" class="project-size" src="projects/web_hcx/hcx-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">>
+			    	</div>
+				    <div class="project-overlay">
+				    	<h3>HCX Website</h3>
+				    	<h4 class="color-white">Web UI Design & Develop</h4>
+				    </div>			    	
 				</a>			
-			</div>		
+			</div>
 			<div class="row-index">
-				<a href="projects/designdiary.html">
-				    <div class="project-small" id="designdiary">
-				    	<img class="project-size" src="projects/design_diary/designdiary-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    	<h3>Design Diary</h3>
-				    	<h4>UX Design</h4>
+			    <a class="project-block" href="projects/artism.html">
+				    <div class="project-small" id="artism">
+				    	<img id="img-artism" class="project-size" src="projects/artism/artism-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    <div class="project-overlay">
+				    	<h3>Artism</h3>
+				    	<h4 class="color-white">UX Design</h4>
+				    </div>
 				    </div>
 				</a>
-			    <a href="projects/nsysuhero.html">
+				<a class="project-block" href="projects/designdiary.html">
+				    <div class="project-small" id="designdiary">
+				    	<img class="project-size" src="projects/design_diary/designdiary-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    <div class="project-overlay">
+				    	<h3>Design Diary</h3>
+				    	<h4 class="color-white">UX Design</h4>
+				    </div>
+				    </div>
+				</a>
+			</div>		
+			<div class="row-index">
+			    <a class="project-block" href="projects/krtco.html">
+				    <div class="project-small" id="krtco">
+				    	<img id="img-artism" class="project-size" src="projects/web_krtco/krtco-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    <div class="project-overlay">
+				    	<h3>KRTCO Website</h3>
+				    	<h4 class="color-white">Web UI Design & Develop</h4>
+				    </div>
+				    </div>
+				</a>				
+			    <a class="project-block" href="projects/nsysuhero.html">
 				   	<div class="project-small" id="nsysu">
-				    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero-project.png" alt="" data-aos="zoom-in" data-aos-duration="2000" data-aos-once="true">
+				    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+			    	<div class="project-overlay">
 				    	<h3>NSYSU HERO</h3>
-				    	<h4>Game UI Design</h4>
+				    	<h4 class="color-white">Game UI Design</h4>
+				    </div>
 				    </div>
 			    </a>
-			    <a href="art.html">
+			    <a class="project-block" href="art.html">
 				   	<div class="project-small">
 				    	<img class="project-size" src="img/parallax_art_1.jpg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    <div class="project-overlay">
 				    	<h3>ART WORKS</h3>
-				    	<h4>Designs and Illustrations</h4>
+				    	<h4 class="color-white">Designs and Illustrations</h4>
+				    </div>
 				    </div>
 			    </a>		    
 			</div>
 		</div>
-		</article>
 		<div style="clear:both;"></div>
 	</div>
 
@@ -136,26 +183,6 @@
 		</div>
 	</div>
 	<div style="clear:both;"></div>
-	</div>
-	<div class="wrapper-index">
-		<div class="section-index">
-			<h2>My Design Process</h2>
-			<div class="card" data-aos="flip-left">
-				<img src="img/process-1.png" class="img-col-one"/><br>
-				<h3>1 - UNDERSTAND</h3>
-				<p>First, I do research, interview users, and keep challenging assumptions to define the problem space.</p>
-			</div>
-			<div class="card" data-aos="flip-left" data-aos-delay="400">
-				<img src="img/process-2.png" class="img-col-one"/><br>
-				<h3>2 - MAKE</h3>
-				<p>Then I use the insights from <mark>UNDERSTNAD</mark> to design, ideate, and create designs and prptotypes.</p>
-			</div>
-			<div class="card" data-aos="flip-left" data-aos-delay="800">
-				<img src="img/process-3.png" class="img-col-one"/><br>
-				<h3>3 - REPEAT</h3>
-				<p>Finally, I repeat and iterate ideas and do usability testing based on learnings from <mark>MAKE</mark> to improve.</p>
-			</div>
-		</div>
 	</div>		
 
 	<footer>
