--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 			<!-- <h1 class="tracking-in-contract">Wei Cheng</h1> -->
 			<h1>Wei Cheng</h1>
 			<p>
-				<b>is a UI/UX Designer who loves to...</b><br>
+				<b>a UI/UX Designer who loves to...</b><br>
 				<h1>
 				  <a href="" class="typewrite" data-period="2000" data-type='[ "Understand.", "Make.", "Repeat."]'>
 				    <span class="wrap"></span>
 				  </a>
 				</h1>			
-			</p><br><br>
+			</p><br>
 			<a href="#process" class="scrollLink">
 				<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
 			</a>
@@ -70,20 +70,27 @@
 	
 	<div class="section-index" id="process">
 		<h2>My Design Process</h2>
-		<div class="card" data-aos="flip-left" data-aos-once="true">
+		<div class="card">
 			<img src="img/process-1.png" class="img-col-one"/><br>
-			<h3>1 - UNDERSTAND</h3>
-			<p>First, I do research, interview users, and keep challenging assumptions to define the problem space.</p>
+			<p data-aos="flip-left" data-aos-once="true">First, I do research and interview <mark>users</mark>, keep challenging assumptions to define problem space.</p>
 		</div>
-		<div class="card" data-aos="flip-left" data-aos-delay="400" data-aos-once="true">
+		<div class="card">
 			<img src="img/process-2.png" class="img-col-one"/><br>
-			<h3>2 - MAKE</h3>
-			<p>Then I use the insights from <mark>UNDERSTNAD</mark> to design, ideate, and create designs and prptotypes.</p>
+			<p data-aos="flip-left" data-aos-delay="400" data-aos-once="true">Then I use the insights from <mark>UNDERSTNAD</mark> to design, ideate, and create designs and prptotypes.</p>
 		</div>
-		<div class="card" data-aos="flip-left" data-aos-delay="800" data-aos-once="true">
+		<div class="card">
 			<img src="img/process-3.png" class="img-col-one"/><br>
-			<h3>3 - REPEAT</h3>
-			<p>Finally, I repeat and iterate ideas and do usability testing based on learnings from <mark>MAKE</mark> to improve.</p>
+			<p data-aos="flip-left" data-aos-delay="800" data-aos-once="true">Finally, I repeat and iterate ideas and do usability testing based on learnings from <mark>MAKE</mark> to improve.</p>
+		</div>
+	</div>
+	<div class="row-intro">
+		<div class="journey">
+			<h2>My Journey to UX</h2>
+			<img src="img/journey-1.png" class="img-journey" data-aos="fade-right" data-aos-once="true"/>
+			<img src="img/journey-2.png" class="img-journey" data-aos="fade-right" data-aos-delay="300"data-aos-once="true"/>
+			<img src="img/journey-3.png" class="img-journey"data-aos="fade-right" data-aos-delay="600"data-aos-once="true"/>
+			<img src="img/journey-4.png" class="img-journey"data-aos="fade-right" data-aos-delay="900"data-aos-once="true"/>
+			<img src="img/journey-5.png" class="img-journey"data-aos="fade-right" data-aos-delay="1200"data-aos-once="true"/>
 		</div>
 	</div>
 
@@ -93,7 +100,7 @@
 			<div class="row-index">
 			    <a class="project-block" href="projects/sportsbiz.html">
 				    <div class="project-small" id="sportsbiz">
-				    	<img id="img-sportsbiz" class="project-size" src="projects/sportsbiz/sportsbiz-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">>
+				    	<img id="img-sportsbiz" class="project-size" src="projects/sportsbiz/sportsbiz-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 				    </div>
 				    <div class="project-overlay">
 				    	<h3>Sportsbiz</h3>
@@ -102,7 +109,7 @@
 				</a>	    
 			    <a class="project-block" href="projects/hcx.html">			    
 				    <div class="project-small" id="hcx">
-				    	<img id="img-artism" class="project-size" src="projects/web_hcx/hcx-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">>
+				    	<img id="img-artism" class="project-size" src="projects/web_hcx/hcx-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 			    	</div>
 				    <div class="project-overlay">
 				    	<h3>HCX Website</h3>
@@ -170,7 +177,7 @@
 		<span class="caption">I traveled to Chichén Itzá. Yucatán, Mexico. (Jan. 2018)</span>		
 		</div>
 		<div class="col-intro">
-			<h2>About Wei Cheng</h2>
+			<h2>More About Wei Cheng</h2>
 			<h4>(You can pronounce “Wei” like “way”)</h4>
 			<p>
 			I am a passionate UX designer based in Austin, pursuing MS degree of information science at UT Austin. I am originally from Taiwan and I have 3+ years of frontend design and develop experience. I see myself as a designer who has a developer’s analytical, logical mind.
