update new project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">WORK</a></span>
 		<span class="drawer_btn_nav"><a href="index.html#about">ABOUT</a></span>
-		<span class="drawer_btn_nav"><a href="wei_cheng_resume.pdf" target="_blank" >RESUME</a></span>
+		<span class="drawer_btn_nav"><a href="wei_cheng_resume.pdf" target="_blank">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -52,14 +52,14 @@
 		<article class="intro">
 			<!-- <img src="img/logo.png" alt="logo" class="logo-mid"> -->
 			<!-- <h1 class="tracking-in-contract">Wei Cheng</h1> -->
-			<h1>Wei Cheng</h1>
+			<h1>Hi, I am Wei Cheng,</h1>
 			<p>
 				<b>a UI/UX Designer who loves to...</b><br>
-				<h1>
-				  <a href="" class="typewrite" data-period="2000" data-type='[ "Understand.", "Make.", "Repeat."]'>
-				    <span class="wrap"></span>
-				  </a>
-				</h1>			
+			<h1>
+			  <a href="" class="typewrite" data-period="2000" data-type='[ "Understand.", "Make.", "Repeat."]'>
+			    <span class="wrap"></span>
+			  </a>
+			</h1>			
 			</p><br>
 			<a href="#process" class="scrollLink">
 				<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
@@ -95,70 +95,75 @@
 	</div>
 
 		<div class="section-index" id="work">
-			<h2>WORK</h2>
-			<h4>Some projects I've done</h4>
+			<h2>UX WORK</h2>
+			<h4>What I created for users.</h4>
 			<div class="row-index">
-			    <a class="project-block" href="projects/sportsbiz.html">
+			    <a class="project-block" href="projects/colorwall.html">
+				    <div class="project-small" id="colorwall">
+				    	<img id="img-colorwall" class="project-size" src="projects/colorwall/colorwall-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    <div class="project-overlay">
+				    	<h3>Colorwall</h3>
+				    	<h4 class="color-white">UI/UX</h4>
+				    </div>
+				    </div>
+				</a>
+			</div>
+			<div class="row-index">
+				<a class="project-block" href="projects/designdiary.html" target="_blank">
+				    <div class="project-small" id="designdiary">
+				    	<img class="project-size" src="projects/design_diary/designdiary-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    <div class="project-overlay">
+				    	<h3>Design Diary</h3>
+				    	<h4 class="color-white">UX</h4>
+				    </div>
+				    </div>
+				</a>
+
+			    <a class="project-block" href="projects/sportsbiz.html" target="_blank">
 				    <div class="project-small" id="sportsbiz">
 				    	<img id="img-sportsbiz" class="project-size" src="projects/sportsbiz/sportsbiz-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 				    </div>
 				    <div class="project-overlay">
 				    	<h3>Sportsbiz</h3>
-				    	<h4 class="color-white">UI/UX Design Internship</h4>	
+				    	<h4 class="color-white">UI/UX</h4>	
 				    </div>
-				</a>	    
-			    <a class="project-block" href="projects/hcx.html">			    
+				</a>
+			</div>
+		</div>
+		<div class="section-index" id="work">
+			<h2>UI WORK</h2>
+			<h4>A little more designs.</h4>	
+			<div class="row-index">
+			    <a class="project-block" href="projects/krtco.html" target="_blank">
+				    <div class="project-small" id="krtco">
+				    	<img id="img-artism" class="project-size" src="projects/web_krtco/krtco-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    <div class="project-overlay">
+				    	<h3>KRTCO Website</h3>
+				    	<h4 class="color-white">Web Design & Develop</h4>
+				    </div>
+				    </div>
+				</a>
+			    <a class="project-block" href="projects/hcx.html" target="_blank">			    
 				    <div class="project-small" id="hcx">
 				    	<img id="img-artism" class="project-size" src="projects/web_hcx/hcx-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 			    	</div>
 				    <div class="project-overlay">
 				    	<h3>HCX Website</h3>
-				    	<h4 class="color-white">Web UI Design & Develop</h4>
+				    	<h4 class="color-white">Web Design & Develop</h4>
 				    </div>			    	
-				</a>			
-			</div>
-			<div class="row-index">
-			    <a class="project-block" href="projects/artism.html">
-				    <div class="project-small" id="artism">
-				    	<img id="img-artism" class="project-size" src="projects/artism/artism-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    <div class="project-overlay">
-				    	<h3>Artism</h3>
-				    	<h4 class="color-white">UX Design</h4>
-				    </div>
-				    </div>
 				</a>
-				<a class="project-block" href="projects/designdiary.html">
-				    <div class="project-small" id="designdiary">
-				    	<img class="project-size" src="projects/design_diary/designdiary-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    <div class="project-overlay">
-				    	<h3>Design Diary</h3>
-				    	<h4 class="color-white">UX Design</h4>
-				    </div>
-				    </div>
-				</a>
-			</div>		
-			<div class="row-index">
-			    <a class="project-block" href="projects/krtco.html">
-				    <div class="project-small" id="krtco">
-				    	<img id="img-artism" class="project-size" src="projects/web_krtco/krtco-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
-				    <div class="project-overlay">
-				    	<h3>KRTCO Website</h3>
-				    	<h4 class="color-white">Web UI Design & Develop</h4>
-				    </div>
-				    </div>
-				</a>				
-			    <a class="project-block" href="projects/nsysuhero.html">
+			    <a class="project-block" href="projects/nsysuhero.html" target="_blank">
 				   	<div class="project-small" id="nsysu">
 				    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero-project.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 			    	<div class="project-overlay">
 				    	<h3>NSYSU HERO</h3>
-				    	<h4 class="color-white">Game UI Design</h4>
+				    	<h4 class="color-white">Game Design</h4>
 				    </div>
 				    </div>
 			    </a>
-			    <a class="project-block" href="art.html">
+			    <a class="project-block" href="art.html" target="_blank">
 				   	<div class="project-small">
-				    	<img class="project-size" src="img/parallax_art_1.jpg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
+				    	<img class="project-size" src="art/art.jpg" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-once="true">
 				    <div class="project-overlay">
 				    	<h3>ART WORKS</h3>
 				    	<h4 class="color-white">Designs and Illustrations</h4>
@@ -174,19 +179,18 @@
 	<div class="row-intro">
 		<div class="col-intro-img">
 		<img src="img/wei.png" alt="wei" class="img-intro">
-		<span class="caption">I traveled to Chichén Itzá. Yucatán, Mexico. (Jan. 2018)</span>		
+		<span class="caption">I traveled to Chichén Itzá. Yucatán, Mexico. (Jan. 2019)</span>		
 		</div>
 		<div class="col-intro">
-			<h2>More About Wei Cheng</h2>
+			<h2>Wei ❤️ Sports. Food. Travel.</h2>
 			<h4>(You can pronounce “Wei” like “way”)</h4>
 			<p>
-			I am a passionate UX designer based in Austin, pursuing MS degree of information science at UT Austin. I am originally from Taiwan and I have 3+ years of frontend design and develop experience. I see myself as a designer who has a developer’s analytical, logical mind.
+			I am a passionate UX designer pursuing MS degree of information science at UT Austin. I am originally from Taiwan and I have 3+ years of frontend design and develop experience. I see myself as a designer who has a developer’s analytical, logical mind.
 			<br><br>
-			I am familiar with app and web frontend development, UI and interaction design and prototyping. Currently I’m enhancing UX research knowledge, as well as more design skills.
+			I am familiar with app and web frontend development, UI design and prototyping. Currently I’m enhancing UX knowledge, as well as design skills.
 			<br><br>
-			I am optimistic and energetic, I like to accept challenges and share my experiences with people. I hope that I can design meaningful solutions for users and make them happy.<br>
-			Thank you for visiting my portfolio :)</p>	
-			<a href="wei_cheng_resume.pdf"><div class="btn-visit" data-aos="zoom-in">View Resume</div></a>
+			I've attended 3 half marathons. I'm optimistic and energetic, I like to accept challenges and share experiences with people. I hope that I can design meaningful solutions for users and make them happy. Thank you for visiting my portfolio :)</p>	
+			<a href="wei_cheng_resume.pdf"><div class="btn-visit" data-aos="zoom-in">VIEW RESUME</div></a>
 		</div>
 	</div>
 	<div style="clear:both;"></div>
