--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -74,7 +74,7 @@
 			</div>
 			<div class="col-one">				
 				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
-				<div class="btn-visit">Read Design Diary on Medium</div></a>
+				<div class="btn-visit">READ ON MEDIUM</div></a>
 			</div>
 		</div>		
 		<div class="row-project row-project-color" data-aos="fade-down" data-aos-once="true">
@@ -90,7 +90,7 @@
 			<hr>
 			<div class="col-one">
 				<img src="design_diary/medium.svg" alt="medium" class="img-small-logo">
-				<p>I choose Medium as the platform to post my design diaries because it provides me a place to expand my network and have potential opportunities to discuss with other designers. Feedbacks are important elements in design thinking process as well. Reading other’s feedbacks helps me to improve and as motivations to create more high-quality design diaries.</p>
+				<p>Medium provides me a place to expand my network and have opportunities to discuss with other designers. Reading other’s feedbacks helps me to improve and create more high-quality design diaries.</p>
 			</div>
 		</div>
 		
@@ -156,16 +156,16 @@
 			</div>
 		</div>
 
-		<a href="krtco.html">
+		<a href="sportsbiz.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h2 class="hcenter">KRTCO Website</h2>
+					<h2 class="hcenter">Sportsbiz</h2>
 				</div>
 				<div class="col-three">
-					<img class="img-col-one" src="web_krtco/krtco.png" alt="">
+					<img class="img-col-one" src="sportsbiz/sportsbiz-project.png" alt="">
 				</div>
 			</div>
 		</a>
