--- a/projects/hcx.html
+++ b/projects/hcx.html
@@ -20,7 +20,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-	<title>HCX Website | WEI CHENG</title>
+	<title>HCX WEBSITE | WEI CHENG</title>
 </head>
 <body>
 	<div class="drawer">
