--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -190,7 +190,7 @@
 					<h2>View the Live Demo</h2>
 					<h4>You can visit the website to see the final development product.</h4>
 					<a target="_blank" href="http://bm.nsysu.edu.tw/krtc-competition2016/home.php">
-					<div class="btn-visit">Visit KRTCO Website</div></a>
+					<div class="btn-visit">VISIT THE WEBSITE</div></a>
 				</div>
 			</div>		
 		<div class="row-project row-project-color-2">
@@ -199,16 +199,16 @@
 				<p>In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method to the development of this website. I practiced how to communicate with designers and project managers, and enhanced my web design and elopement skills.</p>		
 			</div>
 		</div>
-		<a href="artism.html">
+		<a href="nsysuhero.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h5 class="hcenter">Artism</h5>
+					<h5 class="hcenter">NSYSU HERO</h5>
 				</div>
 				<div class="col-three">
-					<img class="img-col-one" src="artism/artism.png" alt="">
+					<img class="img-col-one" src="game_nsysuhero/nsysuhero.png" alt="">
 				</div>
 			</div>
 		</a>
