--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -139,16 +139,16 @@
 			</div>
 		</div> -->
 
-		<a href="designdiary.html">
+		<a href="art.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h2 class="hcenter">Design Diary</h2>
+					<h2 class="hcenter">Art And Designs</h2>
 				</div>
 				<div class="col-three">
-					<img class="img-col-one" src="design_diary/designdiary.png" alt="">
+					<img class="img-col-one" src="../art/art.jpg" alt="">
 				</div>
 			</div>
 		</a>
