--- a/projects/sportsbiz.html
+++ b/projects/sportsbiz.html
@@ -20,7 +20,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-	<title>SportsBiz | WEI CHENG</title>
+	<title>SPROTSBIZ | WEI CHENG</title>
 </head>
 <body>
 	<div class="drawer">
@@ -71,16 +71,16 @@
 			<p>Due to NDA, I can not share the work, but feel free to contact me and chat!</p>
 		</div>
 
-		<a href="hcx.html">
+		<a href="krtco.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJECT ></h6>
 				</div>
 				<div class="col-three">
-					<h2 class="hcenter">HCX Website</h2>
+					<h2 class="hcenter">KRTCO Website</h2>
 				</div>
 				<div class="col-three">
-					<img class="img-col-one" src="web_hcx/hcx-project.png" alt="">
+					<img class="img-col-one" src="web_krtco/krtco-intro.png" alt="">
 				</div>
 			</div>
 		</a>
